--- a/wallpaper/manifest.json
+++ b/wallpaper/manifest.json
@@ -50,7 +50,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wx7036b5736660b186",
         "setting" : {
             "urlCheck" : false
         },
